--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -1,6 +1,7 @@
-/* Limit text to one line */
 .news-title {
-    white-space: nowrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
   }
